<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >

    <RelativeLayout
        android:id="@+id/lytTitlebar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/titlebar_background" >

        <ImageButton
            android:id="@+id/imgAnterior"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_top_style_1"
            android:contentDescription="@string/voltar"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@mipmap/anterior" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imgAnterior"
            android:shadowColor="@color/shadow"
            android:shadowDx="0.5"
            android:shadowDy="0.5"
            android:shadowRadius="0.5"
            android:text="@string/pessoa_list_titulo"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />


        <ImageButton
            android:id="@+id/imgAddPessoa"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_toLeftOf="@+id/imgHome"
            android:layout_centerVertical="true"
            android:background="@drawable/button_top_style_2"
            android:contentDescription="@string/adicionar_pessoa"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@mipmap/adicionar_pessoa" />

        <ImageButton
            android:id="@+id/imgHome"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button_top_style_2"
            android:contentDescription="@string/adicionar_pessoa"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@mipmap/home" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lytSearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lytTitlebar"
        android:background="@color/background_actionbar"
        android:gravity="center_vertical"
        android:padding="5dp" >

        <EditText
            android:id="@+id/edtPesquisar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/form_background"
            android:hint="@string/pesquisar"
            android:inputType="textCapCharacters"
            android:padding="7dp"
            android:singleLine="true"
            android:textColor="@color/hint"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/btnPesquisar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/button_style"
            android:contentDescription="@string/img_pesquisa"
            android:src="@mipmap/pesquisar" />

    </LinearLayout>

    <ListView
        android:id="@+id/pessoaList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lytSearch"
        android:divider="@color/background"
        android:dividerHeight="1dp"
        android:fadeScrollbars="true"
        android:fastScrollEnabled="true"
        android:visibility="gone" />

</RelativeLayout>
