<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >

    <RelativeLayout
        android:id="@+id/lytTitlebar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/titlebar_background" >

        <ImageButton
            android:id="@+id/imgAnterior"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_top_style_1"
            android:contentDescription="@string/voltar"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@mipmap/anterior" />

        <TextView
            android:id="@+id/txtContatoTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imgAnterior"
            android:shadowColor="@color/shadow"
            android:shadowDx="0.5"
            android:shadowDy="0.5"
            android:shadowRadius="0.5"
            android:text="@string/contato_titulo"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imgHome"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button_top_style_2"
            android:contentDescription="@string/adicionar_pessoa"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@mipmap/home" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/lytMap"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/lytTitlebar" >

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/sclDetail"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/lytMap"
        android:fadeScrollbars="true" >

        <LinearLayout
            android:id="@+id/lytContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/txtText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSubText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/subtext"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnChamar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_style"
                android:padding="7dp"
                android:text="@string/chamar"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_style"
                android:padding="7dp"
                android:text="@string/enviar_email"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
